--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -95,6 +95,10 @@ h2 {
     margin-bottom: 20px;
     margin-top: 0;
     grid-template-columns: 1fr 1fr;
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
     @media (width<700px) {
       width: 90%;
       grid-template-columns: 1fr;
@@ -120,6 +124,14 @@ h2 {
 
     row-gap: 30px;
   }
+}
+
+.tier2 {
+  content-visibility: auto;
+  animation-name: fadeIn;
+  animation-duration: 1.2s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
 }
 
 .block_holder {
@@ -325,7 +337,7 @@ button {
   display: flex;
   margin: 0;
   padding: 0;
-  margin-top: 21px;
+
   /* margin-bottom: 30px; */
   align-content: center;
   justify-content: center;
@@ -333,6 +345,8 @@ button {
   font-size: 0.8rem;
   transition: all 0.2s;
   text-align: center;
+
+  margin-top: 21px;
 
   @media (width<600px) {
     width: 80%;
@@ -344,7 +358,9 @@ button {
     flex-direction: column;
     gap: 0;
   }
-
+  & li {
+    /* flex: 1; */
+  }
   & a {
     color: #993199;
     padding: 7px;
@@ -352,8 +368,10 @@ button {
     text-decoration: none;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
+
     gap: 9px;
     border: 1px solid #e7e7e7;
     border-top: 1px solid #f8f8f8;
@@ -394,5 +412,14 @@ button {
     &:hover {
       text-decoration: underline;
     }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
