--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -24,7 +24,11 @@ dd {
 
 body {
   background:
-    radial-gradient(103.89% 81.75% at 95.41% 106.34%, #eaf8ef 6%, rgba(234, 248, 239, 0) 79.68%),
+    radial-gradient(
+      103.89% 81.75% at 95.41% 106.34%,
+      #eaf8ef 6%,
+      rgba(234, 248, 239, 0) 79.68%
+    ),
     radial-gradient(
       297.85% 151.83% at -21.39% 8.81%,
       #faf1f1 0%,
@@ -38,7 +42,7 @@ h1 {
   font-size: clamp(20px, calc(2vw + 2rem), 75px);
   margin: 0;
   color: #1b2a67;
-  font-family: Segoe, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Segoe, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-shadow: 0 2px 0 #fff;
 }
 
@@ -46,7 +50,7 @@ h2 {
   font-size: clamp(20px, calc(2vw + 0.3rem), 65px);
   margin: 0;
   color: #1b2a67;
-  font-family: Segoe, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Segoe, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-shadow: 0 1px 0 #fff;
 }
 
@@ -57,7 +61,8 @@ h2 {
 }
 
 .body_text {
-  font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, 'sans-serif';
+  font-family:
+    Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, "sans-serif";
   font-size: 1em;
   color: #000;
 
@@ -71,13 +76,18 @@ h2 {
 }
 
 .project_title {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.1rem;
   text-align: center;
   color: var(--general-text-color);
   padding: 5px;
   padding-top: 7px;
   text-decoration: none;
+  position: absolute;
+  /* z-index: 11; */
+  bottom: 0;
+  width: 100%;
+  background: #fff;
 }
 
 .main_card_holder {
@@ -99,7 +109,7 @@ h2 {
     animation-duration: 0.5s;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
-    @media (width<700px) {
+    @media (width<800px) {
       width: 90%;
       grid-template-columns: 1fr;
       /* margin-bottom: 0; */
@@ -126,12 +136,22 @@ h2 {
   }
 }
 
+/* Fade-in effect for featured images */
+
+.the_image img {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.the_image img.is-loaded {
+  opacity: 1;
+}
 .tier2 {
   content-visibility: auto;
-  animation-name: fadeIn;
-  animation-duration: 1.2s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
+
+  & img {
+    transition: opacity 1s ease-in-out; /*slower transition for tier2*/
+  }
 }
 
 .block_holder {
@@ -152,6 +172,7 @@ h2 {
   transition: all 0.5s;
 
   &.featured {
+    content-visibility: auto;
     height: 300px;
   }
 
@@ -162,6 +183,9 @@ h2 {
       0.6px 1.1px 3.9px rgb(0 0 0 / 5%),
       5px 9px 31px rgb(0 0 0 / 11%);
     text-decoration: underline;
+    .project_title {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -171,6 +195,12 @@ h2 {
   background-repeat: no-repeat;
   background-position: top;
   height: 100%;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+  }
 }
 
 .testimonials {
@@ -201,7 +231,7 @@ button {
 }
 
 .p-dialog-header {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .project_detail {
@@ -316,7 +346,7 @@ button {
     display: block;
   }
 }
-.keep_em_seperated {
+.separator {
   height: 20px;
   border-top: 1px solid rgba(158, 146, 158, 0.295);
   display: block;
@@ -358,9 +388,7 @@ button {
     flex-direction: column;
     gap: 0;
   }
-  & li {
-    /* flex: 1; */
-  }
+
   & a {
     color: #993199;
     padding: 7px;
@@ -375,7 +403,7 @@ button {
     gap: 9px;
     border: 1px solid #e7e7e7;
     border-top: 1px solid #f8f8f8;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     transition: all 0.3s;
     height: 100%;
     &:hover {
@@ -403,7 +431,7 @@ button {
   margin-top: 5px;
 
   & a {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
     color: rgb(161, 13, 161);
     font-weight: bold;
@@ -421,5 +449,25 @@ button {
   }
   100% {
     opacity: 1;
+  }
+}
+
+.definition {
+  all: unset;
+  color: purple;
+  cursor: help;
+  border-bottom: 1px dotted purple;
+  font-weight: 500;
+}
+
+.definition_panel {
+  width: 25vw;
+  font-size: 0.95rem;
+
+  @media (width<600px) {
+    width: 75vw;
+    .image_holder {
+      order: 1;
+    }
   }
 }
